@@ -1,3 +1,12 @@
+Sat Jul 15 21:42:52 CEST 2006  Guillaume Desmottes <cass@skynet.be>
+
+	* src/fe-gnome/conversation-panel.c:
+	  - Fix a crash when saving transcript without current
+	    session. (Launchpad: #52692)
+	* src/fe-gnome/main-window.c:
+	  - Fix a crash when leaving discussion without current
+	    session.
+
 Mon Jul 10 00:38:11 CEST 2006  Guillaume Desmottes <cass@skynet.be>
 	
 	* src/fe-gnome/navigation-tree.c:
